# reili

./: .dependency-cruiser.js  .dockerignore  .env.example  .gitignore  .release-please-manifest.json  .tagpr  AGENTS.md  CHANGELOG.md  DEVELOPERS.md  Dockerfile  LICENSE.md  README.md  biome.json  package.json  pnpm-lock.yaml  release-please-config.json  renovate.json5  slack-app-manifest.yml  tsconfig.build.json  tsconfig.json
crates/: CHANGELOG.md  Cargo.toml  release-plz.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: json_utils.rs  lib.rs  logger.rs
crates/adapters/src/inbound/slack/: mod.rs  slack_event_parser.rs  slack_interaction_parser.rs  slack_signature_verifier.rs
crates/adapters/src/outbound/: auto_response_judge.rs  mod.rs
crates/adapters/src/outbound/agents/: agent_execution_hook.rs  anthropic_task_runner.rs  bedrock_investigation_coordinator_runner.rs  bedrock_investigation_lead_runner.rs  bedrock_task_runner.rs  datadog_mcp_client.rs  datadog_mcp_tools.rs  github_mcp_tools.rs  github_read_file_tool.rs  instructions_support.rs  investigation_agents.rs  llm_coordinator_runner.rs  llm_investigation_lead_runner.rs  llm_provider_settings.rs  llm_task_runner.rs  llm_usage_collector.rs  llm_usage_tracking_hook.rs  mod.rs  openai_investigation_coordinator_runner.rs  openai_investigation_lead_runner.rs  openai_task_runner.rs  progress_event_hook.rs  progress_reporting_sub_agent_tool.rs  provider_settings.rs  task_agent.rs  task_agents.rs  vertex_ai_anthropic_completion.rs  vertex_ai_task_runner.rs
crates/adapters/src/outbound/anthropic/: anthropic_web_search_adapter.rs  mod.rs
crates/adapters/src/outbound/bedrock/: bedrock_web_search_adapter.rs  mod.rs
crates/adapters/src/outbound/datadog/: datadog_http_client.rs  event_search_adapter.rs  log_search_adapter.rs  mcp_client.rs  metric_query_adapter.rs  mod.rs
crates/adapters/src/outbound/esa/: esa_client.rs  mod.rs  post_get.rs  post_search.rs
crates/adapters/src/outbound/github/: github_mcp_client.rs  github_search_adapter.rs  mod.rs
crates/adapters/src/outbound/jira/: jira_mcp_client.rs  mod.rs
crates/adapters/src/outbound/openai/: mod.rs  openai_web_search_adapter.rs
crates/adapters/src/outbound/slack/: mod.rs  slack_canvas_memory_adapter.rs  slack_channel_lookup_adapter.rs  slack_ephemeral_message_adapter.rs  slack_file_download_adapter.rs  slack_file_shared_message_adapter.rs  slack_message_search_adapter.rs  slack_progress_stream_adapter.rs  slack_reaction_adapter.rs  slack_task_control_message_adapter.rs  slack_thread_history_adapter.rs  slack_thread_reply_adapter.rs  slack_user_group_membership_adapter.rs  slack_web_api_client.rs
crates/adapters/src/outbound/vertex_ai/: mod.rs  vertex_ai_web_search_adapter.rs
crates/adapters/src/queue/: in_memory_job_queue.rs
crates/application/: Cargo.toml
crates/application/src/: cancel_task.rs  enqueue_slack_event.rs  handle_slack_interaction.rs  lib.rs  slack_mention_authorization_service.rs  start_investigation_worker_runner.rs  start_task_worker_runner.rs
crates/application/src/execution/: cancel.rs  errors.rs  memory_context.rs  mod.rs  task.rs  thread_context.rs  worker.rs
crates/application/src/ingress/: authorization.rs  auto_response.rs  enqueue.rs  interaction.rs  mod.rs  router.rs
crates/application/src/investigation/: execute_investigation_job.rs  execution_errors.rs  logger.rs  mod.rs  slack_thread_context_loader.rs
crates/application/src/investigation/services/: build_llm_telemetry.rs  investigation_lead_progress_event_handler.rs  investigation_progress_stream_session.rs  llm_usage_snapshot.rs  mod.rs  progress_update_projector.rs
crates/application/src/progress/: commands.rs  event_handler.rs  mod.rs  projector.rs  session.rs  state.rs
crates/application/src/task/: execute_task_job.rs  execution_errors.rs  github_scope_guard.rs  logger.rs  mod.rs  slack_thread_context_loader.rs
crates/application/src/task/services/: in_flight_job_registry.rs  llm_usage_snapshot.rs  mod.rs  progress_update_projector.rs  task_progress_event_handler.rs  task_progress_stream_session.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  secret.rs
crates/core/src/error/: agent_run_failed.rs  investigation_execution_failed.rs  mod.rs  port_error.rs  task_execution_failed.rs
crates/core/src/investigation/: context.rs  coordinator_runner.rs  investigation_lead_runner.rs  mod.rs  progress_event.rs  progress_reporting.rs  request.rs  telemetry.rs
crates/core/src/knowledge/: mod.rs  web_search.rs
crates/core/src/logger/: log_entry.rs  log_field_value.rs  log_fields.rs  log_level.rs  logger.rs  mod.rs  tests.rs
crates/core/src/messaging/slack/: authorization.rs  auto_response.rs  canvas_memory.rs  control_message.rs  file.rs  file_download.rs  file_shared.rs  interaction.rs  interaction_handler.rs  legacy_attachment.rs  message.rs  message_handler.rs  mod.rs  reaction.rs  search.rs  thread_history.rs  thread_message.rs  thread_reply.rs
crates/core/src/monitoring/datadog/: event_search.rs  log_aggregate.rs  log_search.rs  metric_catalog.rs  metric_query.rs  mod.rs
crates/core/src/queue/: job_queue.rs  mod.rs  task_job_queue.rs
crates/core/src/source_code/: mod.rs
crates/core/src/source_code/github/: mod.rs  pull_request.rs  search.rs  (+2 more)
crates/core/src/task/: cancellation.rs  context.rs  job.rs  memory.rs  mod.rs  progress_event.rs  progress_reporting.rs  request.rs  task_runner.rs  telemetry.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  lib.rs  main.rs  socket_mode.rs
crates/runtime/src/bootstrap/: mod.rs
crates/runtime/src/config/: env.rs  file.rs  loader.rs  mod.rs  model.rs
reili/runtime/: Cargo.toml
reili/runtime/src/: app.rs
reili/runtime/src/bootstrap/: mod.rs
rust/crates/adapters/: Cargo.toml
rust/crates/adapters/src/: json_utils.rs  lib.rs
rust/crates/application/: Cargo.toml
rust/crates/application/src/: enqueue_slack_event.rs  lib.rs  start_investigation_worker_runner.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: app.rs  ingress.rs  lib.rs  main.rs  worker.rs
(+369 files in other folders)
