[workspace]
members = [
    "core",
    "runtime",
    "adapters",
    "application",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
mockall = "0.14.0"
