[workspace]
members = [
    "core",
    "runtime",
    "adapters",
    "application",
]
resolver = "2"

[workspace.package]
# Release versions are managed by Git tags via tagpr, not by Cargo manifests in this workspace.
version = "0.0.0"
edition = "2024"
repository = "https://github.com/reilidev/reili"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
mockall = "0.14.0"
