[package]
name = "reili_adapters"
version = { workspace = true }
edition = "2024"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
jsonwebtoken = "9"
octocrab = "0.39"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rig-core = { version = "0.32", features = ["rmcp"] }
rmcp = { version = "0.16", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reili_core = { path = "../core" }
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rig-bedrock = "0.4.1"

[dev-dependencies]
serde_json = "1"
wiremock = "0.6"
