[package]
name = "reili_adapters"
version = { workspace = true }
edition = "2024"
license = "Apache-2.0"

[dependencies]
mockall.workspace = true
async-trait = "0.1"
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "sso"] }
aws-credential-types = "1"
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sigv4 = { version = "1", features = ["http1"] }
axum = { version = "0.8", default-features = false }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
google-cloud-api = "1.4.0"
google-cloud-aiplatform-v1 = { version = "1.9.0", default-features = false, features = ["prediction-service"] }
http = "1"
jsonwebtoken = "9"
octocrab = "0.39"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rig-core = { version = "0.33", features = ["rmcp"] }
rmcp = { version = "0.16", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
reili_core = { path = "../core" }
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rig-bedrock = "0.4.2"

[dev-dependencies]
reili_core = { path = "../core", features = ["test-support"] }
serde_json = "1"
wiremock = "0.6"
