[package]
name = "reili_application"
version = { workspace = true }
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde_json = "1"
reili_core = { path = "../core" }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
