[package]
name = "reili_application"
version = { workspace = true }
edition = "2024"
license = "Apache-2.0"

[dependencies]
mockall.workspace = true
async-trait = "0.1.89"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
serde_json = "1.0.149"
reili_core = { path = "../core" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "sync", "time"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
reili_core = { path = "../core", features = ["test-support"] }
tokio = { version = "1.50.0", features = ["macros", "rt", "time"] }
