[package]
name = "reili_core"
version = { workspace = true }
edition = "2024"
license = "Apache-2.0"

[features]
test-support = []

[dependencies]
mockall.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
