[package]
name = "reili_core"
version = { workspace = true }
edition = "2024"
license = "Apache-2.0"

[features]
test-support = []

[dependencies]
mockall.workspace = true
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["sync"] }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["macros", "rt", "sync"] }
