[package]
name = "reili_runtime"
version = { workspace = true }
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "reili"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
serde_json = "1"
reili_adapters = { path = "../adapters" }
reili_application = { path = "../application" }
reili_core = { path = "../core" }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
