[package]
name = "sre_runtime"
version = "0.1.0"
edition = "2024"
license = "ISC"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
serde_json = "1"
sre_adapters = { path = "../adapters" }
sre_application = { path = "../application" }
sre_shared = { path = "../shared" }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
